добавил визуальную индикацию хп и мп персонажа в интерфейс